<resources>
    <string name="app_name">TaskTidy</string>
    <string name="version">Version 1.0</string>
    <string name="create">Don\'t have an account? Click Here!</string>
    <string name="signup">Sign in</string>
    <string name="btnlogin">Login</string>
    <string name="email">Enter Email</string>
    <string name="pass">Enter Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="add">Add</string>
    <string name="btnview">View Task</string>
    <string name="db">Dashboard</string>
    <string name="todo">Icon</string>
    <string name="addtask">Enter New Task</string>
    <string name="setprio">Set Priority</string>
    <string name="btncomplete">Completed Task</string>
    <string name="aaronoriasel321_gmail_com">aaronoriasel321@gmail.com</string>
    <string name="aaron_oriasel">Aaron Oriasel</string>
    <string name="role_frontend_developer">Role: Frontend Developer</string>
    <string name="nielosinsao90_gmail_com">NielOsinsao90@gmail.com</string>
    <string name="niel_osinsao">Niel Osinsao</string>
    <string name="role_frontend_developer_backend_developer">Role: Frontend Developer | Backend Developer</string>
    <string name="valezuelajoshua579_gmail_com">valezuelajoshua579@gmail.com</string>
    <string name="joshua_valenzuela">Joshua Valenzuela</string>
    <string name="johnanthony4102_gmail_com">JohnAnthony4102@gmail.com</string>
    <string name="john_aldrin_anthony_portento">John Aldrin Anthony Portento</string>
    <string name="role_backend_developer">Role: Backend Developer</string>
    <string name="aldrin">Aldrin</string>
    <string name="joshua">Joshua</string>
    <string name="aaron">Aaron</string>
    <string name="niel">Niel</string>
    <string name="about">About</string>
    <string name="tasktidy">TaskTidy</string>
    <string name="logo">Logo</string>
    <string name="aboutdesc">\t\t\t\t\tWelcome to Task Manager, your ultimate solution for staying organized and on top of your tasks! This intuitive app is designed to help you manage your daily tasks efficiently, whether they are work-related, personal, or anything in between. With just a few taps, you can add, view, and check off your tasks, ensuring you never forget an important deadline or goal again.</string>
    <string name="aboutkey">Key Features:</string>
    <string name="aboutf1">1. Add Task \n\t\t\t\tQuickly add tasks to your list. Simply tap the Add Task button, give your task a title and description, set a due date, and you are ready to go. Whether it is a one-time task or a recurring one, Task Manager has you covered.</string>
    <string name="aboutf2">2. View Task \n\t\t\t\tView all of your tasks in one convenient list. You can easily see the details of each task, such as its title, due date, and any additional notes you have added. It’s never been easier to keep track of what’s on your to-do list.</string>
    <string name="aboutf3">3. Completed Task \n\t\t\t\tOnce you complete a task, simply mark it as Completed. This feature lets you see a record of your finished tasks, giving you a sense of accomplishment and helping you keep track of your progress. You can even filter tasks by status to view only your completed or pending tasks.</string>
    <string name="about1">Stay Organized &amp; Productive</string>
    <string name="about1desc">\t\t\t\t\tTask Manager helps you stay organized and focused. With an intuitive user interface, customizable task views, and a simple way to track your progress, this app is the perfect companion for anyone looking to increase their productivity. Whether you’re managing personal tasks or a team project, Task Manager helps you stay in control.</string>
    <string name="task_list">Task List</string>
    <string name="add_task">Add Task</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
</resources>