<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6C0FF"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="151dp"
                android:layout_height="128dp"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tasktidy"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/about"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="343dp"
                android:layout_height="134dp"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:text="@string/aboutdesc"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView5"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/aboutkey"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="334dp"
                android:layout_height="97dp"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/aboutf1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="333dp"
                android:layout_height="114dp"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/aboutf2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="336dp"
                android:layout_height="134dp"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:text="@string/aboutf3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="15sp"
                android:text="@string/about1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.175"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView11" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="327dp"
                android:layout_height="137dp"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:text="@string/about1desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView12" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                app:layout_goneMarginBottom="10dp"
                android:text="@string/version"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView13" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>