<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6C0FF"
    tools:context=".AddtaskActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="44dp">


    <EditText
        android:id="@+id/enternewtask"
        android:layout_width="287dp"
        android:layout_height="59dp"
        android:autofillHints=""
        android:hint=""
        android:inputType=""
        android:padding="15dp"
        android:text="@string/addtask"
        android:background="@drawable/yellow2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteY="224dp" />

    <EditText
        android:id="@+id/setprio"
        android:layout_width="287dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/yellow2"
        android:hint=""
        android:inputType=""
        android:padding="15dp"
        android:text="@string/setprio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enternewtask"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextDescription"
        android:layout_width="287dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/yellow3"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:hint="Description"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setprio" />

    <Button
        android:id="@+id/button5"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:background="@drawable/violet"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setprio" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Add Task"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="183dp"
        android:layout_height="131dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>